# component-model-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  cmcppConfig.cmake.in  cmcppConfigVersion.cmake.in  definitions.py  index.md  package-lock.json  package.json  run_tests.py  tmp.txt  tsconfig.json  validation_results.txt  vcpkg-configuration.json  vcpkg-usage.txt  vcpkg.json
.github/: copilot-instructions.md  release.yml
.github/instructions/: component-model.instructions.md  general.instructions.md  wamr.instructions.md
.github/scripts/: summarize-test-failures.sh
.github/workflows/: deploy-docs.yml  install.yml  macos.yml  release.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
.vitepress/: config.ts
.vitepress/theme/: Layout.vue  custom.css  index.ts
cmake/: CompilerOptions.cmake  FindWAMR.cmake  FindWASISDK.cmake  TestingHelpers.cmake
docs/: PACKAGING.md  RELEASE.md  codegen-bugs-found.md  generated-files-structure.md  generated-wamr-helpers.md  issue-backlog.md  quick-start.md  spec-alignment.md  wit-codegen.md  wit-syntax-example.md
grammar/: CMakeLists.txt  README.md  Wit.g4  index.ts
include/: cmcpp.hpp  wamr.hpp  wasmtime.hpp
include/cmcpp/: bool.hpp  context.hpp  error_context.hpp  flags.hpp  float.hpp  func.hpp  integer.hpp  lift.hpp  list.hpp  load.hpp  lower.hpp  map.hpp  monostate.hpp  record.hpp  resource.hpp  runtime.hpp  store.hpp  string.hpp  traits.hpp  tuple.hpp  util.hpp  variant.hpp
samples/: CMakeLists.txt  README.md
samples/wamr/: CMakeLists.txt  README.md  build.sh  host_impl.cpp  main.c  main.cpp  run.sh
samples/wamr-hosts/: CMakeLists.txt
samples/wamr-hosts/sample-one/: CMakeLists.txt  host_impl.cpp
samples/wamr/resources/: CMakeLists.txt  README.md  SUMMARY.md  build.sh  resource_examples.cpp  simple_resource_demo.cpp
samples/wasm/: CMakeLists.txt  main.cpp  sample.wit
samples/wasm-guests/: CMakeLists.txt
samples/wasm-guests/sample-one/: CMakeLists.txt
samples/wasmtime/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
src/: CMakeLists.txt  boolean.cpp  boolean.hpp  cmcpp.cpp  component-model.cpp  component-model.hpp  context.cpp  context.hpp  flags.hpp  flatten.cpp  flatten.hpp  float.cpp  float.hpp  integer.hpp  lift.cpp  lift.hpp  list.hpp  load.cpp  load.hpp  load.ipp  lower.cpp  lower.hpp  platform.hpp  record.hpp  store.cpp  store.hpp  store.ipp  string.cpp  string.hpp  traits.cpp  traits.hpp  tuple.cpp  tuple.hpp  util.cpp  util.hpp  val.cpp  val.hpp  val2.cpp  val2.hpp  variant.cpp  (+3 more)
src copy/: val.hpp
test/: CMakeLists.txt  CODEGEN_VALIDATION.md  CODEGEN_VALIDATION_IMPLEMENTATION.md  CompileStubsSummary.cmake  INCREMENTAL_TESTING.md  INCREMENTAL_TESTING_IMPLEMENTATION.md  README.md  STUB_GENERATION.md  STUB_GENERATION_IMPLEMENTATION.md  STUB_GENERATION_QUICKREF.md  StubGenerationTests.cmake  TESTING_GRAMMAR.md  generate_test_stubs.py  generate_test_stubs.sh  host-util.cpp  host-util.hpp  main.cpp  pytest.cpp  resource_tests.cpp  scratchpad.cpp  summarize_stub_compilation.py  test-grammar.sh  test_grammar.cpp  traits.cpp  val.cpp  val3.cpp  val3.hpp  validate_all_wit_bindgen.cpp  validate_all_wit_bindgen.py  validate_stubs.py  wasmtime.cpp
test/sample/: example.wit  my-game.html  my-game.md  my_game.c  my_game.h
test/source/: wasmtime.cpp
test/wasm/: .gitignore  CMakeLists.txt  CMakePresets.json  bool.cpp  build.sh  util.cpp
test/wasm/.devcontainer/: Dockerfile
tests/: CMakeLists.txt
tests/codegen/: CMakeLists.txt  README.md  generate_test_stubs.cpp  scratchpad.cpp  summarize_stub_compilation.cpp  tmp_popen_test.cpp  validate_stubs.cpp
tests/codegen/cmake_templates/: root_cmake_template.cmake.in
tests/grammar/: CMakeLists.txt  validate_all_wit_bindgen.cpp  validate_stubs.cpp  wasmtime.cpp
tests/unit-tests/: CMakeLists.txt  README.md  generate_test_stubs.cpp
tools/: README.md
tools/wit-codegen/: CMakeLists.txt  README.md  code_generator.cpp  code_generator.hpp  dependency_resolver.cpp  dependency_resolver.hpp  package_registry.cpp  package_registry.hpp  type_mapper.cpp  type_mapper.hpp  types.hpp  utils.hpp  wit-codegen.cpp  wit_parser.cpp  wit_parser.hpp  wit_visitor.cpp  wit_visitor.hpp
vcpkg_overlays/wasi-sdk/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasm-micro-runtime/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasmtime-c-api/: portfile.cmake  vcpkg.json
vcpkg_overlays/wasmtime-cpp-api/: portfile.cmake
wasm/: CMakeLists.txt  CMakePresets.json  build.sh  float.cpp  int.cpp  list.cpp  main.cpp  string.cpp  test.wit  tests.rs  uint.cpp  util.hpp
wasm/.devcontainer/: Dockerfile  devcontainer.json
wasm/install-target/: wasmembed.wasm
wasm/wasm32-wasi/: Dockerfile
